create-quote api
