# config/routesValues.js
@@ -1,4 +1,6 @@
 exports.routeValues = {
   "/quote/fetch-quote-meta-data": "c2a04e70f16541f5b52f1b0803ee46d3",
   "/quote/get-lead-info": "c2a04e70f16541f5b52f1b0803ee46d3",
+  "/quote/create-quote": "c2a04e70f16541f5b52f1b0803ee46d3"
+  
 };
