# controllers/quote.js
@@ -1,5 +1,6 @@
-const { responseFormatter, statusCodes } = require("../utils");
+const { responseFormatter, statusCodes, generateId } = require("../utils");
 const { event, quote, lead } = require("../db");
+const { generateUniqueString } = require("../utils/generateId");
 
 exports.getMetaData = async (request, reply) => {
   try {
@@ -75,3 +76,58 @@ exports.getLeadInfo = async (request, reply) => {
       );
   }
 };
+
+exports.createQuote = async (request, reply) => {
+  try {
+    const reqBody = {
+      quote_identity: generateId.generateUniqueString(),
+      quick_quote_id: generateId.generateQuickQuiteId(),
+      dob: request.body.dob,
+      product_name: request.body.product_name,
+      leadid: request.body.leadid,
+      nationality: request.body.nationality,
+      residential_status: request.body.residential_status,
+      smoker: request.body.smoker,
+      occupation: request.body.occupation,
+      educational_background: request.body.educational_background,
+      annual_income: request.body.annual_income,
+      coverage_amount: request.body.coverage_amount,
+      cover_till_age: request.body.cover_till_age,
+      premium_payment_term: request.body.premium_payment_term,
+      payment_type: request.body.payment_type,
+      base_premium: request.body.base_premium,
+      add_on_rider_amt: request.body.add_on_rider_amt,
+      total_premium: request.body.total_premium
+    }
+
+    const entityIdentity = await quote.getEntityIdentity(reqBody.leadid);
+    await quote.updateEntityDobByIdentity(entityIdentity, reqBody.dob);
+    const quoteRes = await quote.createQuote(reqBody);
+    if (quoteRes.length) {
+      await event.insertEventTransaction(request.isValid);
+      return reply
+        .status(statusCodes.OK)
+        .send(
+          responseFormatter(
+            statusCodes.OK,
+            "Quote created successfully",
+            {quick_quote_id: quoteRes[0].quick_quote_id}
+          )
+        );
+    } else {
+      return reply
+        .status(statusCodes.OK)
+        .send(responseFormatter(statusCodes.OK, "Quote did not created"));
+    }
+  } catch (error) {
+    return reply
+      .status(statusCodes.INTERNAL_SERVER_ERROR)
+      .send(
+        responseFormatter(
+          statusCodes.INTERNAL_SERVER_ERROR,
+          "Internal server error occurred",
+          { error: error.message }
+        )
+      );
+  }
+}
